# lanealucys_robot

./: README.md  fastdds_discovery_server.service  lanealucys_robot.service  lanealucys_robot_companion.service  package.xml  setup.cfg  setup.py
config/: cartographer.lua  ekf.yaml  external_nav.parm  joystick.yaml  mapper_params_online_async.yaml  nav2_params.yaml  twist_mux.yaml  wildthumper_bridge.yaml
lanealucys_robot/: pose_rewriter.py  repeater.py  tf2_broadcaster.py
launch/: apm.launch  companion_robot_launch.py  joystick.launch.py  mavros_launch.py  robot_launch.py  robot_sim_launch.py  wildthumper.launch.py  wildthumper_playpen.launch.py
rviz/: nav2_default_view.rviz  nav2_view.rviz
urdf/: lanealucys_robot.urdf
world/: wildthumper_playpen.sdf
