<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lanealucys_robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="lanealucy@gmail.com">lanealucy</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>slam_toolbox</exec_depend>
  <!--<exec_depend>cartographer_ros</exec_depend>-->
  <exec_depend>rviz2</exec_depend>
  <!--<exec_depend>ardupilot_gz_bringup</exec_depend>-->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>topic_tools</exec_depend>
  <exec_depend>micro_ros_agent</exec_depend>
  <!--<exec_depend>twist_mux</exec_depend>-->
  <exec_depend>twist_stamper</exec_depend>
  
  <exec_depend>rclpy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
